updated from deprecated APIs