@@ -2,6 +2,7 @@ package ca.on.oicr.pinery.client;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -11,13 +12,9 @@ import ca.on.oicr.ws.dto.RunDto;
 import java.util.ArrayList;
 import java.util.List;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 
 public class SequencerRunClientTest {
-
-  @Rule public final ExpectedException exception = ExpectedException.none();
 
   private PineryClient pineryClientMock;
   private SequencerRunClient client;
@@ -41,8 +38,8 @@ public class SequencerRunClientTest {
 
     List<RunDto> results = client.all();
     assertEquals(2, results.size());
-    assertEquals(new Integer(111), results.get(0).getId());
-    assertEquals(new Integer(222), results.get(1).getId());
+    assertEquals(Integer.valueOf(111), results.get(0).getId());
+    assertEquals(Integer.valueOf(222), results.get(1).getId());
   }
 
   @Test
@@ -57,8 +54,7 @@ public class SequencerRunClientTest {
   public void testGetAllBadStatus() throws HttpResponseException {
     doThrow(new HttpResponseException()).when(client).getResourceList("sequencerruns");
 
-    exception.expect(HttpResponseException.class);
-    client.all();
+    assertThrows(HttpResponseException.class, () -> client.all());
   }
 
   @Test
@@ -68,15 +64,14 @@ public class SequencerRunClientTest {
     doReturn(run).when(client).getResource("sequencerrun/6");
 
     RunDto result = client.byId(6);
-    assertEquals(new Integer(6), result.getId());
+    assertEquals(Integer.valueOf(6), result.getId());
   }
 
   @Test
   public void testGetByIdBadStatus() throws HttpResponseException {
     doThrow(new HttpResponseException()).when(client).getResource("sequencerrun/6");
 
-    exception.expect(HttpResponseException.class);
-    client.byId(6);
+    assertThrows(HttpResponseException.class, () -> client.byId(6));
   }
 
   @Test
@@ -86,14 +81,13 @@ public class SequencerRunClientTest {
     doReturn(run).when(client).getResource("sequencerrun?name=Jimmy");
 
     RunDto result = client.byName("Jimmy");
-    assertEquals(new Integer(567), result.getId());
+    assertEquals(Integer.valueOf(567), result.getId());
   }
 
   @Test
   public void testGetByNameBadStatus() throws HttpResponseException {
     doThrow(new HttpResponseException()).when(client).getResource("sequencerrun?name=Jimmy");
 
-    exception.expect(HttpResponseException.class);
-    client.byName("Jimmy");
+    assertThrows(HttpResponseException.class, () -> client.byName("Jimmy"));
   }
 }
